--- a/style2.css
+++ b/style2.css
@@ -10,10 +10,11 @@ background-attachsent  fixa a imagem
 
 
 html{margin: -2%;
-height: 10px;}
+width: 104%;}
 
 body{height: 10%;
-background-color: black;}
+background-color: black;
+margin: 0%;}
 
 header{background-color: black;
 color: white;
@@ -36,7 +37,7 @@ a{text-decoration: none;}
 .main{background-color: rgb(255, 255, 255);
     color: black;
 width: 99%;
-margin-left: 2px;
+margin-left: 11px;
 margin-right: 1px;
 padding-top: 10%;
 padding-bottom: 10%;}
@@ -47,7 +48,8 @@ background-position: right center;
 padding-top: 8%;
 padding-bottom: 15%;
 color: white;
-background-attachment: fixed;}
+background-attachment: fixed;
+margin-right: -6px;}
 
 
 
@@ -62,11 +64,20 @@ main>p{margin-left: 10px;
 
 }
 
-footer{background-color: white;
+footer >section{background-color: white;
     padding-top: 10%;
     padding-bottom: 1px;
     padding-left: 4%;
+    margin-right: -6px;
 }
+
+section .fin{width: 100%;
+}
+section>img{background-size: cover;
+background-position: bottom right;
+width: 101%;
+height: 100%;}
+
 
 
 
